// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`signup mutation should return a user exist error 1`] = `
Array [
  [GraphQLError: User with email exists],
]
`;

exports[`signup mutation should return created user profile 1`] = `
Object {
  "signup": Object {
    "user": Object {
      "email": "test2@mail.com",
      "firstName": "Test2",
      "lastName": "User2",
    },
  },
}
`;

exports[`signup mutation should return validation errors 1`] = `
Array [
  [GraphQLError: Some field(s) are failing validation],
]
`;
